spotify changes
