# swagger.yaml
@@ -50,7 +50,22 @@ paths:
           description: Query parameter missing
         '500':
           description: Internal Server Error
-
+  /songs/add/spotify:
+    post:
+      summary: Add a song to the database
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Song'
+      responses:
+        '201':
+          description: Created
+        '400':
+          description: Bad Request
+        '500':
+          description: Internal Server Error  
   /songs/spotify/{id}:
     get:
       summary: Get a Spotify track by ID
